[tool.poetry]
name = "benchlinginventory"
version = "0.1.0"
description = ""
authors = ["catherinegomes <cgomestx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
benchling-sdk = "^1.13.0"
click = "^8.1.7"
pydantic = "^2.8.2"
boto3 = "^1.34.153"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
pytest = "^8.2.2"
pre-commit = "^3.7.1"
setuptools = "^72.2.0"

[tool.pytest.ini_options]
pythonpath = [".", "src", "tests"]
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "unittest: unit tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
